python crash: bpy.context.scene.update() #42688

Closed
opened 2014-11-22 14:08:57 +01:00 by Jacques Lucke · 7 comments
Member

System Information
Windows 7, Nvidia Quadro 600

Blender Version
Broken: Blender 2.72 c6ab67b

Short description of error
I found another bug that is closely related to this one: #42619

Exact steps for others to reproduce the error

  1. Open the text editor
  2. Copy this script in a new text block
import bpy

class TestTree(bpy.types.NodeTree):
	bl_idname = "test_tree"
	bl_label = "Animation";
	bl_icon = "X"
	
	def update(self):
		bpy.context.scene.update()  # this is the only difference to the other bug
		
bpy.utils.register_class(TestTree)

bpy.data.node_groups.new("test", "test_tree").use_fake_user = True
  1. Run the script
  2. Save the current file (and leave Blender open!)
  3. Open the just saved file -> crash
**System Information** Windows 7, Nvidia Quadro 600 **Blender Version** Broken: Blender 2.72 c6ab67b **Short description of error** I found another bug that is closely related to this one: #42619 **Exact steps for others to reproduce the error** 1. Open the text editor 2. Copy this script in a new text block ``` import bpy class TestTree(bpy.types.NodeTree): bl_idname = "test_tree" bl_label = "Animation"; bl_icon = "X" def update(self): bpy.context.scene.update() # this is the only difference to the other bug bpy.utils.register_class(TestTree) bpy.data.node_groups.new("test", "test_tree").use_fake_user = True ``` 3. Run the script 4. Save the current file (and leave Blender open!) 5. Open the just saved file -> crash
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

This issue was referenced by 789eaa0f5b

This issue was referenced by 789eaa0f5bda185d78e25d4fd252054c9f39e955

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 789eaa0f5b.

Closed by commit 789eaa0f5b.

This issue was referenced by 3d6b91229370e3e25964a41125ea93a4c68e0fed

This issue was referenced by 3d6b91229370e3e25964a41125ea93a4c68e0fed

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42688
No description provided.